[gd_scene load_steps=3 format=3 uid="uid://drq7m22alyebb"]

[ext_resource type="Script" uid="uid://7u4f0dnspohj" path="res://scripts/util/random_species_demo.gd" id="1_vb0qd"]
[ext_resource type="Script" uid="uid://d2cowe0t633mx" path="res://scripts/util/character_randomizer_control.gd" id="2_8i1rt"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vb0qd")

[node name="CharacterRandomizer (Control)" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_8i1rt")

[node name="MarginContainer" type="MarginContainer" parent="CharacterRandomizer (Control)"]
custom_minimum_size = Vector2(12, 12)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterRandomizer (Control)/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Species"

[node name="SpeciesOption" type="OptionButton" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="RandomizeButton" type="Button" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Randomize All"

[node name="EquipRandomButton" type="Button" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Equip Random"

[node name="EquipSearchContainer" type="VBoxContainer" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SearchLabel" type="Label" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer/EquipSearchContainer"]
layout_mode = 2
text = "Equipment Search"

[node name="SearchBar" type="LineEdit" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer/EquipSearchContainer"]
layout_mode = 2
placeholder_text = "Search equipment (e.g. hd01-0001)"

[node name="ExportPNGButton" type="Button" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Export PNG"

[node name="SelectedEquipmentContainer" type="VBoxContainer" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SelectedLabel" type="Label" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/SelectedEquipmentContainer"]
layout_mode = 2
text = "Forced Equipment:"

[node name="NoSelectionLabel" type="Label" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/SelectedEquipmentContainer"]
modulate = Color(0.7, 0.7, 0.7, 1)
layout_mode = 2
text = "(none selected)"

[node name="SelectedItems" type="FlowContainer" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer/SelectedEquipmentContainer"]
layout_mode = 2

[node name="DisplayGrid" type="GridContainer" parent="CharacterRandomizer (Control)/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 4

[node name="SearchResults" type="ItemList" parent="CharacterRandomizer (Control)"]
visible = false
z_index = 100
custom_minimum_size = Vector2(200, 100)
layout_mode = 0
offset_left = 400.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 150.0
